[tool.poetry]
name = "cloudsmith-python-example"
version = "1.0.0"
description = "Cloudsmith: Be Awesome. Automate Everything."
authors = ["Cloudsmith Ltd <support@cloudsmith.io>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cloudsmith-python-example = "cloudsmith_python_example:be_awesome"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
